syntax = "proto3";

package com.shopic.grpc.reviewservice;


option java_multiple_files = true;
option java_package = "com.shopic.grpc.reviewservice";


message ProductRatingRequest {
  int64 product_id = 1;
}

message ProductRatingsRequest {
  repeated int64 product_id = 1;
}

message ProductRatingsResponse {
  repeated ProductRating product_rating = 1;
}

message ProductRating {
  int64 product_id = 1;
  string rating = 2;
  int32 review_count = 3;
}

message ProductRatingResponse {
  string rating = 1;
}




service ReviewService {
  rpc getProductRating(ProductRatingRequest) returns (ProductRatingResponse);

  rpc getProductRatings(ProductRatingsRequest) returns (ProductRatingsResponse);
}